# fem

./: .gitignore  CMakeLists.txt  README.md  axis_2d.hpp  class_diagram.puml  concentrated_load_2d.hpp  constraint_2d.hpp  constraint_collection_2d.hpp  edge_2d.hpp  finite_element_2d.hpp  force_vector_2d.hpp  global_stiffness_matrix_2d.hpp  load_2d.hpp  load_collection_2d.hpp  main.cpp  material.hpp  mesh_2d.hpp  node_2d.hpp  node_index.hpp  poissons_ratio.hpp  problem_type.hpp  structure_2d.hpp  triangle_element_2d.hpp  uniform_load_2d.hpp  vector_util.hpp
main/: CMakeLists.txt
main/axis/: axis_2d.cpp  axis_2d.hpp
main/constraint/: constraint_2d.cpp  constraint_2d.hpp  constraint_collection_2d.hpp
main/element/: finite_element_2d.cpp  finite_element_2d.hpp  triangle_element_2d.hpp
main/load/: concentrated_load_2d.hpp  load_2d.hpp  load_collection_2d.hpp
main/main/: main.cpp
main/material/: material.cpp  material.hpp  poissons_ratio.hpp  youngs_modulus.hpp
main/mesh/: mesh_2d.hpp
main/node/: node_2d.cpp  node_2d.hpp  node_index.hpp
main/problem_type/: problem_type.hpp
main/solver/: force_vector_2d.hpp  global_stiffness_matrix_2d.hpp
main/structure/: structure_2d.cpp  structure_2d.hpp
main/util/: vector_util.hpp
main/vtk/: vtu_writer.hpp
src/constraint/: constraint_2d.cpp  constraint_2d.hpp  constraint_collection_2d.cpp
src/core/constraint/: constraint_2d.cpp  constraint_2d.hpp  constraint_collection_2d.cpp  constraint_collection_2d.hpp
src/core/element/: finite_element_2d.hpp  triangle_element_2d.cpp  triangle_element_2d.hpp
src/core/geometry/: geometry.hpp  point.hpp  point_2d.cpp  point_2d.hpp  rectangle.cpp  rectangle.hpp
src/core/load/: concentrated_load_2d.cpp  concentrated_load_2d.hpp  load_2d.cpp  load_collection_2d.cpp  load_collection_2d.hpp  node_force_2d.hpp
src/core/material/: material.cpp  material.hpp  material_constant.hpp  plane_strain_material.cpp  plane_strain_material.hpp  poissons_ratio.cpp  (+5 more)
src/element/: finite_element_2d.cpp  finite_element_2d.hpp  triangle_element_2d.cpp  triangle_element_2d.hpp
src/example/: auto_mesh.cpp  eso_method.cpp  five_elements.cpp  simple.cpp
src/load/: concentrated_load_2d.cpp  concentrated_load_2d.hpp  load_collection_2d.cpp  load_collection_2d.hpp
src/main/: main.cpp
src/material/: material.cpp  material.hpp  material_constant.cpp  poissons_ratio.cpp  youngs_modulus.cpp  youngs_modulus.hpp
src/mesh/: mesh_2d.cpp  mesh_2d.hpp
src/node/: node.cpp  node.hpp  node_2d.cpp  node_2d.hpp
src/solver/: force_vector_2d.cpp  force_vector_2d.hpp  global_stiffness_matrix_2d.cpp  global_stiffness_matrix_2d.hpp
src/structure/: structure_2d.cpp  structure_2d.hpp
test/: CMakeLists.txt
test/element/: triangle_element_2d_test.cpp
test/geometry/: rectangle_test.cpp
test/material/: material_test.cpp
(+26 files in other folders)
